--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
+
+.row {
+    --bs-gutter-x: 0.25rem;
+}
+
+.form-group label {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.form-check {
+    margin: 0 0.5rem;
+}
+
 .images-references {
     display: flex;
 }
@@ -18,6 +32,14 @@
 .item {
     display: flex;
     flex-direction: column;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+h2 {
+    font-size: 30px;
 }
 
 h3 {
