--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 .row {
     --bs-gutter-x: 0.25rem;
 }
@@ -59,12 +58,25 @@ h3 {
     height: 75px;
 }
 
+.header div {
+    margin: 0 5px;
+}
+
+textarea {
+    resize: none;
+}
+
 @media print {
     @page {
         size: A4;
         margin: 5mm;
         page-break-inside: auto;
     }
+
+    .page {
+        page-break-before: always;
+    }
+
 
     body {
         margin: 0;
