--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 
 .images-references {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .images-references .item {
@@ -34,6 +35,10 @@
     border: 1px solid #ddd;
     border-radius: 5px;
     padding-bottom: 5px;
+}
+
+p {
+    text-align: justify;
 }
 
 h1 {
@@ -110,6 +115,10 @@ textarea {
 
     .only-print {
         display: block;
+    }
+
+    .header h1 {
+        font-size: 1.5rem;
     }
 }
 
